<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/navigation_home"
            android:enabled="true"
            android:title="@string/home"
            android:icon="@drawable/baseline_home_24"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/navigation_daily_activity"
            android:enabled="true"
            android:title="@string/daily_activities"
            android:icon="@drawable/baseline_checklist_24"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/navigation_gallery"
            android:enabled="true"
            android:title="@string/gallery"
            android:icon="@drawable/baseline_photo_library_24"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/navigation_music"
            android:enabled="true"
            android:title="@string/music"
            android:icon="@drawable/baseline_library_music_24"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/navigation_profile"
            android:enabled="true"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/profile"
            app:showAsAction="ifRoom" />

</menu>