<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="36dp">


    <TextView
            android:layout_centerInParent="true"
            android:id="@+id/title"
            style="@style/Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lets_connect" />

    <TextView
            android:id="@+id/caption"
            android:textAlignment="center"
            android:layout_below="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_caption" />

    <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
                android:layout_width="10dp"
                android:layout_height="10dp"
                app:strokeWidth="0dp"
                app:cardBackgroundColor="@color/md_theme_primaryContainer" />

        <com.google.android.material.card.MaterialCardView
                android:layout_marginHorizontal="8dp"
                android:layout_width="10dp"
                android:layout_height="10dp"
                app:strokeWidth="0dp"
                app:cardBackgroundColor="@color/md_theme_primaryContainer" />

        <com.google.android.material.card.MaterialCardView
                android:layout_width="10dp"
                android:layout_height="10dp"
                app:strokeWidth="0dp"
                app:cardBackgroundColor="@color/md_theme_primaryContainer" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish" />

    <com.google.android.material.button.MaterialButton
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous" />


</RelativeLayout>