<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="36dp">

        <TextView
                android:layout_marginTop="24dp"
                android:layout_marginBottom="42dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agista_nseptiyanto"
                android:gravity="center_horizontal"
                style="@style/Headline3" />

        <com.google.android.material.card.MaterialCardView
                app:strokeColor="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="36dp"
                android:layout_gravity="center">

            <ImageView
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gallery_10" />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
                app:cardBackgroundColor="@color/md_theme_primaryContainer"
                app:strokeColor="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

            <LinearLayout
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_water_24" />

                <TextView
                        android:textColor="@color/md_theme_onPrimaryContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hobby"
                        style="@style/Headline6" />

                <TextView
                        android:textColor="@color/md_theme_onPrimaryContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mancing" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
                app:cardBackgroundColor="@color/md_theme_primaryContainer"
                app:strokeColor="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

            <LinearLayout
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:layout_width="match_parent"
                    android:paddingEnd="16dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="24dp"
                    android:orientation="vertical">


                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_water_24" />

                <TextView
                        android:textColor="@color/md_theme_onPrimaryContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/makanan_favorite"
                        style="@style/Headline6" />

                <TextView
                        android:textColor="@color/md_theme_onPrimaryContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dimsum" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
                app:cardBackgroundColor="@color/md_theme_primaryContainer"
                app:strokeColor="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

            <LinearLayout
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_fastfood_24" />

                <TextView
                        android:textColor="@color/md_theme_onPrimaryContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minuman_favorite"
                        style="@style/Headline6"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kopi"
                        android:textColor="@color/md_theme_onPrimaryContainer"/>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
                app:cardBackgroundColor="@color/md_theme_primaryContainer"
                app:strokeColor="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

            <LinearLayout
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="24dp"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_water_24" />

                <TextView
                        android:textColor="@color/md_theme_onPrimaryContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/interest"
                        style="@style/Headline6" />

                <TextView
                        android:textColor="@color/md_theme_onPrimaryContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mancing" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
                app:cardBackgroundColor="@color/md_theme_primaryContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:strokeColor="@android:color/transparent">

            <LinearLayout
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_wb_sunny_24" />

                <TextView
                        android:textColor="@color/md_theme_onPrimaryContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cita_cita"
                        style="@style/Headline6" />

                <TextView
                        android:textColor="@color/md_theme_onPrimaryContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/masuk_surga" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>