<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="36dp">

        <TextView
                android:layout_marginVertical="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/musics_favorite"
                android:gravity="center_horizontal"
                style="@style/Headline3" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Headline5"
                android:text="@string/music"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_music"
                tools:listitem="@layout/item_music"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
                android:layout_marginBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Headline5"
                android:text="@string/video"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp" />

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_video"
                tools:listitem="@layout/item_music"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>