<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="36dp">

        <TextView
                android:layout_marginVertical="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daily_nactivity"
                android:gravity="center_horizontal"
                style="@style/Headline3" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Headline5"
                android:text="@string/friends"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/item_friend" />

        <TextView
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Headline5"
                android:text="@string/activities"
                android:layout_marginStart="32dp" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_activities"
                android:paddingHorizontal="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_activity" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>

